# mcp-mobile-automation-test

./: .env.example  README.md  pyproject.toml  requirements.txt  setup.py
